Remove commented out code, fix line spacing

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ ul li::before {
   position: relative;
   padding-right: 3px;
   vertical-align: middle;
-  font-size: 12px;
+  font-size: 14px;
   z-index: 1;
   font-style: normal;
   font-variant: normal;
@@ -221,7 +221,6 @@ main section {
 .card:hover {
   transform: translateY(-6px) scale(1)
 }
-
 
 /* INNER CARD IMAGE STYLING */
 
@@ -393,7 +392,6 @@ img:hover {
 
 .num-text {
   margin-top: 1%;
-  /* color: #333333; */
   font-weight: 300;
 }
 
@@ -408,7 +406,6 @@ img:hover {
 @media screen and (max-width: 1280px) {
   main h1 {
     margin-top: 11%;
-    /* margin-left: 2%; */
   }
 }
 
